--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -193,6 +193,7 @@
         <module>google-cloud-functions-http</module>
         <module>google-cloud-functions</module>
         <module>grpc-common</module>
+        <module>rocksdb</module>
     </modules>
 
     <build>
